[gd_scene load_steps=10 format=3 uid="uid://bo7goa0j0dqjh"]

[ext_resource type="Script" path="res://objects/enemies/enemy.gd" id="1_6xujs"]
[ext_resource type="Texture2D" uid="uid://bgpoysmrtnwim" path="res://sprites/sturdy/Sturdy Antic.png" id="2_ehw6m"]
[ext_resource type="Texture2D" uid="uid://dsch0sufdx7ma" path="res://sprites/sturdy/Sturdy Attack.png" id="3_byur0"]
[ext_resource type="Texture2D" uid="uid://bturcuvda603j" path="res://sprites/sturdy/Sturdy Hurt.png" id="4_c2h5l"]
[ext_resource type="Texture2D" uid="uid://c3n2rcmtc0oo7" path="res://sprites/sturdy/Sturdy Walk 1.png" id="5_nmsc1"]
[ext_resource type="Texture2D" uid="uid://bwg17ibvu3cvt" path="res://sprites/sturdy/Sturdy Walk 2.png" id="6_sk6fr"]
[ext_resource type="SpriteFrames" uid="uid://dbv3sy5qjatnl" path="res://sprites/burst_animation.tres" id="7_68nfa"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8fl5f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ehw6m")
}, {
"duration": 1.0,
"texture": ExtResource("3_byur0")
}],
"loop": true,
"name": &"attack",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_c2h5l")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_nmsc1")
}, {
"duration": 1.0,
"texture": ExtResource("6_sk6fr")
}],
"loop": true,
"name": &"walk",
"speed": 3.0
}]

[sub_resource type="SphereShape3D" id="SphereShape3D_iix87"]
radius = 0.75

[node name="enemy2" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.591225, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_6xujs")
max_health = 25
speed = 5

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.125, 0, 0, 0, 0.125, 0, 0, 0, 0.125, 0, 0, 0)
billboard = 1
shaded = true
sprite_frames = SubResource("SpriteFrames_8fl5f")
animation = &"hurt"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.778187, 0, 0, 0, 0.778187, 0, 0, 0, 0.778187, 0, -0.208219, 0)
shape = SubResource("SphereShape3D_iix87")

[node name="RayCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 0.75)

[node name="MuzzleA" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -0.45, 0.3, 0.4)
visible = false
sprite_frames = ExtResource("7_68nfa")
frame = 2

[node name="MuzzleB" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.45, 0.3, 0.4)
visible = false
sprite_frames = ExtResource("7_68nfa")
frame = 2

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = -0.5
avoidance_enabled = true
